feat: standardize Paper and MCP logging